# micronations

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp
assets/scenes/: default.json
src/app/: app.cpp  app.h  app_oncleanup.cpp  app_onevent.cpp  app_oninit.cpp  app_onloop.cpp  app_onrender.cpp  state.h  state_manager.cpp  state_manager.h
src/assets/: asset.h  asset_manager.cpp  asset_manager.h  text_asset.cpp  text_asset.h  texture.cpp  texture.h
src/data/: id.pb.cc  id.pb.h  id.proto
src/game/: game_state.cpp  game_state.h  player.cpp  player.h
src/math/: transform.h
src/scene/: board.cpp  board.h  node.cpp  node.h  piece.cpp  piece.h  scene.cpp  scene.h  scene_state.cpp  scene_state.h  scene_state_build.cpp  sprite.cpp  sprite.h  tile.cpp  tile.h
